; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_log.c_svn_log__switch.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_log.c_svn_log__switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"switch %s %s@%ld%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @svn_log__switch(i8* %0, i8* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %11 = load i32*, i32** %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i32*, i32** %10, align 8
  %14 = call i32 @svn_path_uri_encode(i8* %12, i32* %13)
  %15 = load i8*, i8** %7, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call i32 @svn_path_uri_encode(i8* %15, i32* %16)
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = call i32 @log_depth(i32 %19, i32* %20)
  %22 = call i8* @apr_psprintf(i32* %11, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %17, i32 %18, i32 %21)
  ret i8* %22
}

declare dso_local i8* @apr_psprintf(i32*, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @svn_path_uri_encode(i8*, i32*) #1

declare dso_local i32 @log_depth(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
